# simple_data_catalog

./: .copier.yml  .gitignore  .gitmodules  README.md  antora-playbook.yml  antora.yml  copier.yaml  copier.yml  package-lock.json  package.json  pyproject.toml  {{ _copier_conf.answers_file }}.jinja
.github/workflows/: deploy.yml  static.yml
data-catalog/: data-catalog.ttl  data-catalog.yaml  prefix.yaml
docs/: search-index.js
docs/data-catalog/Dataset/: dfwejbsdf.html  herrcgre.html
docs/data-catalog/concept/: abc.html  bcd.html  data.html  def.html  example.html  science.html  test.html
docs/data-catalog/data-catalog/: example-catalog.html  fhwiehduwke.html  test-catalog.html
docs/data-catalog/dataset/: dfwejbsdf.html  djemchweer.html  herrcgre.html  sample-dataset.html  test-dataset.html
docs/data-catalog/metric/: fkrhkqewjewrc.html
metadata/: catalog.yaml
modules/: AGENTS.md  README.md  nav.adoc
modules/Dataset/pages/: dfwejbsdf.adoc  herrcgre.adoc
modules/concept/pages/: abc.adoc  bcd.adoc  data.adoc  def.adoc  example.adoc  science.adoc  test.adoc
modules/data-catalog/: nav.adoc  prefix.yaml  prefix.yaml.jinja
modules/data-catalog/pages/: abcde123.adoc  example-catalog.adoc  fhwiehduwke.adoc  test-catalog.adoc
modules/dataservice/pages/: ewfalsdfh.adoc
modules/dataset-series/pages/: abcde.adoc
modules/dataset/pages/: abcde.adoc  bvkljfhds.adoc  dfwejbsdf.adoc  djemchweer.adoc  ewfalsdfh.adoc  herrcgre.adoc  sample-dataset.adoc  test-dataset.adoc
modules/metric/pages/: def.adoc  fkrhkqewjewrc.adoc
modules/scripts/: generate-datacatalog.sh
modules/src/simple_data_catalog/: create_adoc_table.py  create_data_quality_table.py  create_metadata_table.py  create_series_page.py  main.py  page_creation_functions.py
modules/workflows/: deploy.yml
scripts/: generate-datacatalog.sh
src/simple_data_catalog/: analysis_functions.py  catalog_page.py  create_adoc_table.py  create_catalog_page.py  create_concept_page.py  create_data_catalog.py  create_dataservice_page.py  create_dataset_page.py  create_distribution_table.py  create_front_page.py  create_metadata_table.py  create_metric_page.py  create_series_page.py  generate_data_catalog.py  main.py  page_creation_functions.py  parse_yaml.py
supplemental-ui/partials/: footer-content.hbs  header-content.hbs
template/: README.md  antora-playbook.yml.jinja  pyproject.toml  pyproject.toml.jinja
template/.github/workflows/: submit-to-central-catalog.yml
template/data-catalog/: data-catalog.yaml.jinja  prefix.yaml.jinja
template/scripts/: generate-datacatalog.sh  submit-to-catalog.py
template/src/simple_data_catalog/: add_figure_str.py  analysis_functions.py  create_concept_page.py  create_dataservice_page.py  create_distribution_table.py  parse_catalog.py
template/supplemental-ui/partials/: header-content.hbs
test/: abcde.adoc  bsd.adoc  example_index.adoc  fkrhkqewjewrc.adoc  herrcgre.adoc  lineage.puml  someotherdataset.adoc  test-lineage.md  testcatalog.yaml  testdata.ttl
